--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=managementSystem
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/order_management
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=11111111
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
